<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/forestgreen"/>
    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sharp"
            android:hint="@string/tip_account"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            />
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/fullname"
            android:gravity="center"
            android:background="@drawable/sharp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_fullname"
            android:textSize="20sp"/>
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/password"
            android:gravity="center"
            android:background="@drawable/sharp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_password"
            android:inputType="textPassword"
            android:textSize="20sp"/>

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/password1"
            android:gravity="center"
            android:background="@drawable/sharp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_password_again"
            android:inputType="textPassword"
            android:textSize="20sp"/>
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/emailAddress"
            android:gravity="center"
            android:background="@drawable/sharp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_email"
            android:textSize="20sp"/>
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/address"
            android:gravity="center"
            android:background="@drawable/sharp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_address"
            android:textSize="20sp"/>
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/phoneNo"
            android:gravity="center"
            android:background="@drawable/sharp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_phone"
            android:inputType="number"
            android:textSize="20sp"/>、
        <Button
            android:id="@+id/btn_register"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="register"
            android:textColor="@color/white"
            android:layout_below="@id/password_input"
            android:layout_centerHorizontal="true"
            android:background="@color/mediumseagreen"/>
    </LinearLayout>

</LinearLayout>